@@ -1,0 +1,16 @@
+title: Check the memory usage of db2 instances
+agents: solaris, aix, linux
+author: Bastian Kuhn <bk@mathias-kettner.de>
+license: GPL
+distribution: check_mk
+description:
+ This Check determines the memory limit and the usage limit for
+ each db2 instance found on server. The agent plugin db2_mem.sh is needed.
+ The agent plugin greps for the instances in the process list, and try
+ to switch to each instance and execute db2pd -dptnmem
+
+inventory:
+ One service will be created for each instance
+
+[configuration]
+db2_mem_default_levels (tuple): Default warning and critical level in percent
