@@ -612,3 +612,10 @@ def perfometer_genu_screen(row, command, perf):
 
 perfometers['check_mk-genu_pfstate'] = perfometer_genu_screen
 
+def perfometer_db2_mem(row, command, perf):
+    maxw = float(perf[0][6])
+    used_level = float(perf[0][1])
+    used_perc = (100.0 / maxw) * used_level
+    return "%d%% used" % used_perc  , perfometer_linear(used_perc, "#0000FF")
+
+perfometers['check_mk-db2_mem'] = perfometer_db2_mem
